# ThaumicIndustrial

./: .gitignore  CMakeLists.txt
assets/thaumicindustrial/locale/: en_US.lang  manifest.json
include/core/: Buffer.hpp  Object.hpp  ScopeGuard.hpp  Variable.hpp  define.hpp
include/render/: Fragment.hpp  Image.hpp  Layer.hpp  RenderObject.hpp  RenderSystem.hpp  RenderTarget.hpp  Sprite.hpp  SpriteSet.hpp  TileMap.hpp
include/runtime/: Application.hpp  AssetLoader.hpp  AssetManager.hpp  ConfigManager.hpp  ImageLoader.hpp  JsonLoader.hpp  Locale.hpp  LocaleManager.hpp  Logger.hpp  ModManager.hpp  SaveManager.hpp
mods/i18n/: manifest.json
mods/i18n/assets/i18n/locale/: manifest.json  zh_CN.lang
src/: main.cpp
src/core/: Buffer.cpp  Variable.cpp
src/render/: Image.cpp  Layer.cpp  RenderSystem.cpp  RenderTarget.cpp  Sprite.cpp  SpriteSet.cpp  TileMap.cpp
src/runtime/: Application.cpp  AssetManager.cpp  ConfigManager.cpp  ImageLoader.cpp  JsonLoader.cpp  Locale.cpp  LocaleManager.cpp  Logger.cpp  ModManager.cpp  SaveManager.cpp
